--- a/config/database.yml
+++ b/config/database.yml
@@ -11,44 +11,22 @@
 #
 default: &default
   adapter: mysql2
-  encoding: utf8
+  encoding: utf8mb4
+  charset: utf8mb4
+  collation: utf8mb4_general_ci
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password:
-  socket: /tmp/mysql.sock
+  host: <%= ENV.fetch("RDS_HOSTNAME") { "localhost" } %>
+  username: <%= ENV.fetch("RDS_USERNAME") { "root" } %>
+  password: <%= ENV.fetch("RDS_PASSWORD") { "" } %>
 
 development:
   <<: *default
   database: knowledge-stocker-api_development
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   <<: *default
   database: knowledge-stocker-api_test
 
-# As with config/secrets.yml, you never want to store sensitive information,
-# like your database password, in your source code. If your source code is
-# ever seen by anyone, they now have access to your database.
-#
-# Instead, provide the password as a unix environment variable when you boot
-# the app. Read http://guides.rubyonrails.org/configuring.html#configuring-a-database
-# for a full rundown on how to provide these environment variables in a
-# production deployment.
-#
-# On Heroku and other platform providers, you may have a full connection URL
-# available as an environment variable. For example:
-#
-#   DATABASE_URL="mysql2://myuser:mypass@localhost/somedatabase"
-#
-# You can use this database configuration with:
-#
-#   production:
-#     url: <%= ENV['DATABASE_URL'] %>
-#
 production:
   <<: *default
   database: knowledge-stocker-api_production
-  username: knowledge-stocker-api
-  password: <%= ENV['KNOWLEDGE-STOCKER-API_DATABASE_PASSWORD'] %>
