--- a/config/database.yml
+++ b/config/database.yml
@@ -11,9 +11,8 @@
 #
 default: &default
   adapter: mysql2
-  encoding: utf8mb4
-  charset: utf8mb4
-  collation: utf8mb4_general_ci
+  encoding: utf8
+  charset: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   host: <%= ENV.fetch("RDS_HOSTNAME") { "localhost" } %>
   username: <%= ENV.fetch("RDS_USERNAME") { "root" } %>
