add nodejs to dockerfile

--- a/container/rails/Dockerfile
+++ b/container/rails/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR $APP_ROOT
 RUN echo "deb http://deb.debian.org/debian jessie main" > /etc/apt/sources.list && \
     echo "deb http://security.debian.org jessie/updates main" >> /etc/apt/sources.list && \
     apt-get update && \
-    apt-get install -y build-essential mysql-client --no-install-recommends && \
+    apt-get install -y nodejs build-essential mysql-client --no-install-recommends && \
     rm -rf /var/lib/apt/lists/*
 
 ADD Gemfile $APP_ROOT
