--- a/container/rails/Dockerfile
+++ b/container/rails/Dockerfile
@@ -4,10 +4,8 @@ ENV APP_ROOT=/usr/src/app
 RUN mkdir -p $APP_ROOT
 WORKDIR $APP_ROOT
 
-RUN echo "deb http://deb.debian.org/debian jessie main" > /etc/apt/sources.list && \
-    echo "deb http://security.debian.org jessie/updates main" >> /etc/apt/sources.list && \
-    apt-get update && \
-    apt-get install -y nodejs build-essential mysql-client --no-install-recommends && \
+RUN apt-get update && \
+    apt-get install -y mysql-client --no-install-recommends && \
     rm -rf /var/lib/apt/lists/*
 
 ADD Gemfile $APP_ROOT
